--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cv-ats-builder",
-  "version": "0.1.0",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,6 +13,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.91.1",
     "groq-sdk": "^0.37.0",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "react": "19.2.3",
