--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@marsidev/react-turnstile": "^1.4.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.91.1",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.1",
+    "dotenv": "^17.2.3",
     "groq-sdk": "^0.37.0",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.563.0",
